metadata1/unpackaged/objects/Office__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_ID__c</fullName>
        <label>Accounting ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asbestos_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asbestos Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlDu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Biller assigned to this office</inlineHelpText>
        <label>Billing Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Accounting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Officesfj0m</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biohazard_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Biohazard Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlHD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Manager_Email_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional recipients for PM assignment email alert</description>
        <label>Branch Manager Email Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>General Branch Manager of office, if no divisions are applicable.</description>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Catastrophes_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catastrophes Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlHh</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Office_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Office Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices6SuO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consulting Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlHw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contents_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operations Manager of Contents Division</description>
        <label>Contents Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesylxS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Service</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CustomerService</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demolition_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demolition Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlEd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ES_PM_Board_Up__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ES PM - Board Up</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesQlvu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ES_PM_Roof_Tarp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ES PM - Roof Tarp</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesQlvk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ES_PM_Smoke_Cleaning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ES PM - Smoke Cleaning</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesQlw4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ES_PM_Water_Mitigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ES PM - Water Mitigation</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesQlva</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ES_and_Contents_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operational Manager of Emergency Services and Contents divisions</description>
        <label>ES and Contents Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVP_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVP 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlCc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EVP_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVP 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlD6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Emergency_Services_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operations Manager of Emergency Services Division</description>
        <label>Emergency Services Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environmental_Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch Manager of the Environmental Division, if applicable to that office.</description>
        <label>Environmental Branch Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environmental_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operations Manager for the Environmental division</description>
        <label>Environmental Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health_Science_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operations Manager of Health Science Division</description>
        <label>Health Science Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlE9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_No__c</fullName>
        <label>License No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlIV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microbial_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Microbial Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlGj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Facebook_link__c</fullName>
        <label>Office Facebook link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Office_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlDf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Office_Yelp_link__c</fullName>
        <description>Office Yep Link</description>
        <label>Office Yelp link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>General Operations Manager of an office, if divisions are not applicable</description>
        <label>Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Admin_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Admin 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesE1C5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Admin_two__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Admin 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesE1CT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices80Iv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NorCal-Washington</fullName>
                </value>
                <value>
                    <fullName>SoCal-Nevada</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager (DEL)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlDL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State picklist field to be used in Commission calculations to indicate whether an AE is selling outside their territory-- meaning outside of the state that their office is in.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Structure_Contents_Branch_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Branch Manager of Structure and Contents divisions</description>
        <label>Structure/Contents Branch Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Offices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Additional recipients that need to be emailed the survey responses via the &apos;New Survey Notification&apos; workflow.</description>
        <label>Survey Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Officess6bF</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technical_Services_Operations_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Services Operations Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficesdlIG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficeshXcG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_order_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work order Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OfficeshXc6</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Office</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>EVP_1__c</columns>
        <columns>EVP_2__c</columns>
        <columns>Branch_Manager__c</columns>
        <columns>Asbestos_Operations_Manager__c</columns>
        <columns>Lead_Operations_Manager__c</columns>
        <columns>Demolition_Operations_Manager__c</columns>
        <columns>Health_Science_Operations_Manager__c</columns>
        <columns>Emergency_Services_Operations_Manager__c</columns>
        <columns>Contents_Operations_Manager__c</columns>
        <columns>Microbial_Operations_Manager__c</columns>
        <columns>Biohazard_Operations_Manager__c</columns>
        <columns>Catastrophes_Operations_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>